--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -3,77 +3,30 @@
     <head>
         <script src="/head.js" defer></script>
     </head>
+
 <body>
-    <div class="containter">
-        <div class="coursework_dropdown">
-            <div class="coursework-example-container">
-                <div class="coursework-quote" style="background-color:rgba(196, 196, 196);">
-                    <h2>Edexcel A Level - A* Coursework Example 1:</h2>
+    <div class="containter"> 
+        <div class="quote">
+            <h2>Coursework Examples</h2>
+        </div>
+        <div class="content-wrapper">
+            <div class="portfolio-items-wrapper-notes_single">
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-color: grey;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="../coursework/coursework pages/edexcel_alevel_coursework_A_E.html">Edexcel A Level - A* Coursework Example</a>
+                        </div>
+                    </div>
                 </div>
 
-                <a href="#" class="drop_down" style="background-color:rgba(196, 196, 196); border-top: 2px solid rgba(196, 196, 196);">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-            </div>
-
-            <div class="content-wrapper">
-                <div class="portfolio-items-wrapper-notes_single">
-
-                    <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgb(185, 22, 22, 0.5); border-top: 2px solid rgba(185, 22, 22);"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 1 Research.pdf">Part 1: Research</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(22, 125, 185, 0.5);"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 2 Specification.pdf">Part 2: Specification</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(55, 148, 48, 0.5);"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 3 Design Ideas.pdf">Part 3: Design Ideas</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(155, 108, 213, 0.5);"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 4 Development and Final Idea.pdf">Part 4: Development and Final Design</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="portfolio-item-wrapper-notes-coursework">
-                        <div class="portfolio-img-background-coursework" style="background-color: rgba(54, 178, 206, 0.5);"></div>
-                        <div class="img-text-wrapper-notes">
-                            <div class="blurbox">
-                                <a href="..\documents\Coursework examples\Edexcel A level Coursework A example - 5 Evaluation.pdf">Part 5: Evaluation</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
             </div>
         </div>
 
-        <script src="../footer.js"></script>
-
-
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../script.js"></script>
+<script src="/script.js"></script>
 </html>
