--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -13,7 +13,7 @@
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-color: grey;"></div>
+                    <div class="portfolio-img-background-notes" style="background-color: rgb(66, 84, 172, 0.5);"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
                             <a href="../coursework/coursework pages/edexcel_alevel_coursework_A_E.html">Edexcel A Level - A* Coursework Example</a>
