--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/selecting_appropriate_tools_equip_a_processes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/selecting_appropriate_tools_equip_a_processes.html
@@ -7,128 +7,18 @@
 <body style="background-color: rgb(255, 255, 255);">
     <div class="containter" style="background-color: rgb(255, 255, 255);">  
         <div class="quote" margin-top style="background-color: rgb(255, 255, 255);">
-            <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
+            <h2>Selecting appropriate tools, equipment and processes</h2>
         </div>
-
-        <!-- Search bar section -->
-        <div class="search-container" style="background-color: rgb(255, 255, 255);">
-            <input type="text" id="searchInput" placeholder="Search for topics...">
-            <button onclick="search()">Search</button>
-        </div>
-        <ul id="searchResults"></ul>
 
         <div class="content-wrapper">
-            <div class="portfolio-items-wrapper">
+            <div class="portfolio-items-wrapper_notes_single">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/.jpg)" title="A bunch of materials"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_alevel_design_and_make_notes_topics/design_methods_and_processes.html">Topic 1: Design methods and processes</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/.html">Design theory</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_topics/ProcessesTechniquesAndSpecialistTools.html">How technology and cultural changes can impact on the work of
-                                designers</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio4.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="notes_topics/DigitalTechnologies.html">Critical analysis and evaluation</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio5.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <a href="notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html">Selecting appropriate tools, equipment and processes
-                            </a>
-                            <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio6.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="notes_topics/EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio7.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
-                            <a href="notes_topics/AdoptingSafeWorkingPractices.html">Accuracy in design and manufacture</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio8.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
-                            <a href="notes_topics/FeaturesOfManufacturingIndustries.html">Responsible design
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio9.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
-                            <a href="notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html">Design for manufacture and project management</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio10.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <a href="notes_topics/CurrentLegislation.html">National and international standards in product design</a>
-                            <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
-                        </div>
-                    </div>
-                </div>
-                                
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio13.jpg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="blurbox">
-                            <a href="notes_topics/MathematicsForD&T.html">Mathematics for D&T</a>
-                            <!-- <a href="Notes\MathematicsForD&T.html">Mathematics for D&T</a> -->
+                            <a href="aqa_alevel_design_and_make_notes_pages/national_a_international_standards_notes.html">National and international standards in product design</a>
                         </div>
                     </div>
                 </div>
