--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html
@@ -35,7 +35,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="/.html">Design theory</a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/design_theory.html">Topic 2: Design theory</a>
                         </div>
                     </div>
                 </div>
@@ -45,7 +45,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_topics/ProcessesTechniquesAndSpecialistTools.html">How technology and cultural changes can impact on the work of
+                            <a href="aqa_alevel_design_and_make_notes_topics/how_tech_a_culture_changes_impact.html">Topic 3: How technology and cultural changes can impact on the work of
                                 designers</a>
                         </div>
                     </div>
@@ -56,7 +56,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
-                            <a href="notes_topics/DigitalTechnologies.html">Critical analysis and evaluation</a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/design_processes.html">Topic 4: Design processes</a>
                         </div>
                     </div>
                 </div>
@@ -65,8 +65,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/portfolio5.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html">Selecting appropriate tools, equipment and processes
-                            </a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/critical_analysis_and_evaluation.html">Topic 5: Critical analysis and evaluation        </a>
                             <!-- <a href="Notes\FactorsInfluencingTheDevelopmentOfProducts.html">Factors Influencing The Development Of Products</a> -->
                         </div>
                     </div>
@@ -77,7 +76,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a> -->
-                            <a href="notes_topics/EffectsOfTechnologicalDevelopments.html">Effects Of Technological Developments</a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/selecting_appropriate_tools_equip_a_processes.html">Topic 6: Selecting appropriate tools, equipment and processes</a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +86,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\AdoptingSafeWorkingPractices.html">Adopting Safe Working Practices and Reacting To Potential Hazards</a> -->
-                            <a href="notes_topics/AdoptingSafeWorkingPractices.html">Accuracy in design and manufacture</a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/accuracy_in_design_a_manufacture.html">Topic 7: Accuracy in design and manufacture</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +96,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\FeaturesOfManufacturingIndustries.html">Features Of Manufacturing Industries</a> -->
-                            <a href="notes_topics/FeaturesOfManufacturingIndustries.html">Responsible design
+                            <a href="aqa_alevel_design_and_make_notes_topics/responsible_design.html">Topic 8: Responsible design
                             </a>
                         </div>
                     </div>
@@ -108,7 +107,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DesigningForMaintenanceAndTheCleanerEnvironment.html">Designing For Maintenance and The Cleaner Environment</a> -->
-                            <a href="notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html">Design for manufacture and project management</a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/design_for_manufacture_and_project_management.html">Topic 9: Design for manufacture and project management</a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +116,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/portfolio10.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="notes_topics/CurrentLegislation.html">National and international standards in product design</a>
+                            <a href="aqa_alevel_design_and_make_notes_topics/national_a_international_standards.html">Topic 10: National and international standards in product design</a>
                             <!-- <a href="Notes\CurrentLegislation.html">Current Legislation</a> -->
                         </div>
                     </div>
