--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/design_methods_and_processes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/design_methods_and_processes.html
@@ -7,19 +7,39 @@
 <body>
     <div class="containter"> 
         <div class="quote">
-            <h2>Design communication</h2>
+            <h2>Design methods and processes</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(/images/designinfluences.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="/.html">Iterative design process</a>
+                            <a href="aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html">Iterative design process</a>
                         </div>
                     </div>
                 </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html">Iterative design process</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html">Iterative design process</a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
