--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_plymer_shet_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_plymer_shet_notes.html
@@ -6,45 +6,221 @@
 
 <body>
     <div class="containter"> 
-        <div class="quote">
-            <h2>Safe Working Practices</h2>
-        </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrapper-notes_single">
+        <div class="notes-content-wrapper">
+            <div class="notes-content-header" style="background-image:url(/images/polymersheet.jpg)" title="printing background">
+                <h1 style="color:white"><u><b>Performance characteristics of polymer based sheet and film</b></u></h1>
+            </div>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
-                        </div>
-                    </div>
-                </div>
+                    <div class="notes-content-subheader">
+            
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
-                        </div>
-                    </div>
-                </div>
+            <h3 id="FoamBoard"><u><b>Foam Board:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Lightweight</li>
+                <li>Easy to cut and shape</li>
+                <li>Can be scored and folded</li>
+                <li>Good rigidity</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Not very durable</li>
+                <li>Can be easily dented or crushed</li>                                                               
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Model making, Presentation boards, Mounting artwork<br><br><br><br></h3>
 
-                <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
-                    <div class="img-text-wrapper-notes">
-                        <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
-                        </div>
-                    </div>
-                </div>
+<h3 id="FlutedPolypropylene"><u><b>Fluted Polypropylene:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Waterproof</li>
+                <li>Lightweight and strong</li>
+                <li>Easy to print on</li>
+                <li>Good impact resistance</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Can be difficult to fold cleanly</li>
+                <li>Not biodegradable</li>                                                                
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Signs, Box construction, Display stands<br><br><br><br></h3>
+
+<h3 id="TranslucentPolypropylene"><u><b>Translucent Polypropylene Sheets:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Flexible</li>
+                <li>Can be folded and creased</li>
+                <li>Water resistant</li>
+                <li>Good for printing</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Not fully transparent</li>
+                <li>Prone to scratches</li>                                                                
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Packaging, Stationery, Folders<br><br><br><br></h3>
+
+<h3 id="Styrofoam"><u><b>Styrofoam:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Lightweight</li>
+                <li>Easy to cut and shape</li>
+                <li>Good thermal insulation</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Brittle and can snap easily</li>
+                <li>Not environmentally friendly</li>                                                               
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Modelling, Insulation, Formers for vacuum forming<br><br><br><br></h3>
+
+<h3 id="LDPE"><u><b>Low-Density Polyethylene (LDPE) Sheet:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Flexible</li>
+                <li>Waterproof</li>
+                <li>Can be heat-sealed</li>
+                <li>Good chemical resistance</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Not very strong</li>
+                <li>Not biodegradable</li>                                                                
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Wrapping, Packaging, Plastic bags<br><br><br><br></h3>
+
+<h3 id="PlastazoteFoam"><u><b>Plastazote Foam:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Impact-resistant</li>
+                <li>Lightweight</li>
+                <li>Water-resistant</li>
+                <li>Good cushioning properties</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Not biodegradable</li>
+                <li>Can be expensive</li>                                                                
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Protective packaging, Sports equipment padding, Orthotics<br><br><br><br></h3>
+
+<h3 id="CelluloseAcetate"><u><b>Cellulose Acetate:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Transparent</li>
+                <li>Biodegradable</li>
+                <li>Good flexibility</li>
+                <li>Can be heat-sealed</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Not very strong</li>
+                <li>Prone to tearing</li>                                                                
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Packaging, Film for photography, Overlays and laminates<br><br><br><br></h3>
+
+<h3 id="Polyactide"><u><b>Polylactide (PLA) Sheet and Film:</b></u></h3>
+<table>
+    <tr class="notes-table-header">
+        <th>Advantages</th>
+        <th>Disadvantages</th>
+    </tr>
+    <tr>
+        <td class="notes-table-data-pro">
+            <ul>
+                <li>Biodegradable</li>
+                <li>Can be composted</li>
+                <li>Good transparency</li>
+                <li>Good strength</li>
+            </ul>
+        </td>
+        <td class="notes-table-data-con">
+            <ul>
+                <li>Not heat-resistant</li>
+                <li>More expensive than traditional plastics</li>                                                                
+            </ul>
+        </td>
+    </tr>
+</table>
+<h3><b>Uses: </b>Biodegradable packaging, Food containers, Disposable cutlery<br><br><br><br></h3>
+
+
 
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
