--- a/notes/notes_level.html
+++ b/notes/notes_level.html
@@ -13,9 +13,9 @@
         <!-- Search bar section -->
         <div class="search-container" style="background-color: rgb(255, 255, 255);">
             <input type="text" id="searchInput" placeholder="Search for topics...">
-            <button id="searchButton">Search</button> <!-- Removed onclick -->
+            <button onclick="search()">Search</button>
         </div>
-        <ul id="searchResults"></ul> <!-- Add this to display search results -->
+        <ul id="searchResults"></ul>
 
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
@@ -63,5 +63,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="script.js" defer></script>
+<script src="/script.js"></script>
 </html>
